src/objects/Zendesk__Zendesk_Agent_Details__c.object
<CustomObject>
    <description>To store the per-agent credentials for multiple Zendesk domains</description>
    <fields>
        <fullName>Zendesk__AccessToken__c</fullName>
        <label>Access Token</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Zendesk__Password__c</fullName>
        <label>Password</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Zendesk__UseOauth__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Oauth</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zendesk__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Zendesk_Agent_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zendesk__Username__c</fullName>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__Zendesk_Domain__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Zendesk Domain</label>
        <referenceTo>Zendesk__Zendesk_Domain__c</referenceTo>
        <relationshipLabel>Zendesk Agent Details</relationshipLabel>
        <relationshipName>Zendesk_Agent_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Zendesk Agent Details</label>
    <listViews>
        <fullName>Zendesk__All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Zendesk__Password__c</columns>
        <columns>Zendesk__User__c</columns>
        <columns>Zendesk__Zendesk_Domain__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Zendesk Agent Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zendesk Agent Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>